# hrid

./: .pre-commit-config.yaml  README.md  environment.yaml  noxfile.py  pyproject.toml
.chores/: update-environment.py
.github/workflows/: pytest-runs.yaml
docs/: environment.yaml
docs/source/: api.rst  conf.py  index.rst
docs/source/_autosummary/: hrid.cli.rst  hrid.generator.rst  hrid.rst  hrid.sets.rst
src/hrid/: __init__.py  _version.py  cli.py  generator.py  sets.py
src/hrid/dictionary/: adjectives.yaml  adverbs.yaml  nouns.yaml  verbs.yaml
tests/: test_dictionary.py  test_hrid.py  test_word_set.py
tests/test_dictionary/: verbs.yaml
tests/test_word_set/: sample.yaml
